# Backend

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  sql_app.db
fastapi_app/: LICENSE  README.md  app.py  crud.py  database.py  exceptions.py  get_db.py  models.py  schemas.py
fastapi_app/controllers/: balance_controller.py  category_controller.py  category_shares_controller.py  expenditure_controller.py  expenditure_share_controller.py  group_controller.py  group_member_controller.py  invitation_controller.py  request_controller.py  statistics_controller.py  user_controller.py
fastapi_app/services/: balance_service.py  category_service.py  category_share_service.py  expenditure_service.py  expenditure_share_service.py  group_member_service.py  group_service.py  invitation_service.py  request_service.py  statistics_service.py  user_service.py
