[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = "Backend for Splitify"
authors = ["Guido Bergman <gbergman@fi.uba.ar>", "Pedro Flynn <pflynn@fi.uba.ar>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
python-dotenv = "^0.21.0"
uvicorn = "^0.18.3"
uuid = "^1.30"
sqlalchemy = "^2.0.29"
datetime = "^5.5"
round-percentages = "^1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
